Bugfix - Russian buttons
What
=================
The original Exo Cyrillic font was messing up the buttons on the russian
homepage. They've been replaced with Exo2 from google. However, due to
Exo2 not playing nicely with other characters like Exo Cyrillic does,
I've only applied Exo2 to the buttons specifically.

Why
=================
The text within the buttons were misaligning heavily, and normal ways of
changing the dimensions, etc. were unsuccessful. In the interest of
efficiency, the other font was applied.

Ticket: #9

--- a/server/wp-content/themes/ct/style.css
+++ b/server/wp-content/themes/ct/style.css
@@ -896,12 +896,13 @@ input:-ms-input-placeholder { /* Internet Explorer 10+ */
 #wrapper h1:lang(ru),
 #wrapper p:lang(ru),
 #wrapper h2:lang(ru),
-#content ul li a:lang(ru),
 #clients_header:lang(ru),
 #bottom_left:lang(ru),
 .bottom_text:lang(ru){
-	font-family: 'Exo 2', Arial, sans-serif;
 	font-family: exo_cyrillicregular, Arial, sans-serif;
+}
+#content ul li a:lang(ru){
+	font-family: 'Exo 2', Arial, sans-serif;
 }
 .menu ul li a:lang(ru){
 	padding: 0px 16px;
